--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <meta http-equiv="refresh" content="1; URL=https://lgctoken.com/" />
+  <meta http-equiv="refresh" content="1; URL=https://bep20.github.io/bep20-generator" />
 </head>
 <body>
-  <p>If you are not redirected in five seconds, <a href="https://lgctoken.com/">click here</a>.</p>
+  <p>If you are not redirected in five seconds, <a href="https://bep20.github.io/bep20-generator">click here</a>.</p>
 </body>
