--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	<a href="/erc20-generator" class="nav-link action-button">
   ETH/ERC20 Token
 </a>
-	<a href="/bep20-generator" class="nav-link action-button">
+	<a href="https://bep20.github.io/bep20-generator" class="nav-link action-button">
   BSC/BEP20 Token
 </a>
-	<a href="/polygon-generator" class="nav-link action-button">
+	<a href="https://bep20.github.io/polygon-generator" class="nav-link action-button">
   Polygon/MATIC Token
 </a>
 			<a href="https://www.createmytoken.net/solana-token-creator/spl-token/" class="nav-link action-button">
